[agcpplib template] Fix azure, fix conan test name, enhance CMake

--- a/agcpplib/azure-pipelines.yml
+++ b/agcpplib/azure-pipelines.yml
@@ -14,8 +14,6 @@ resources:
     endpoint: "Bitbucket - agjenkinsci"
 
 stages:
-- stage: "Validation"
-  jobs:
-  - template: pipeline-agrepository.yml
-    parameters:
-      projectName: {{project}}
+- template: pipeline-agrepository.yml@templates
+  parameters:
+    projectName: {{project}}
