--- a/agcpplib/conan/test_package/CMakeLists.txt
+++ b/agcpplib/conan/test_package/CMakeLists.txt
@@ -3,7 +3,7 @@ project(PackageTest CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${CMAKE_CURRENT_BINARY_DIR}>)
 
-find_package({{Project}} REQUIRED COMPONENTS {{project}})
+find_package({{Project}} CONFIG REQUIRED COMPONENTS {{project}})
 
 add_executable(example example.cpp)
 target_link_libraries(example PRIVATE ag::{{project}})
