--- a/cpprepo/src/libs/{{project}}/{{project}}/CMakeFinds.cmake.in
+++ b/cpprepo/src/libs/{{project}}/{{project}}/CMakeFinds.cmake.in
@@ -1,1 +1,3 @@
-#@find_package(Name CONFIG REQUIRED COMPONENTS name)
+#@find_package@(Name CONFIG REQUIRED COMPONENTS name)
+
+#@find_package_internal@({{Project}} CONFIG REQUIRED COMPONENTS name)
