--- a/cpprepo/src/libs/{{project}}/{{project}}/CMakeFinds.cmake.in
+++ b/cpprepo/src/libs/{{project}}/{{project}}/CMakeFinds.cmake.in
@@ -1,3 +1,10 @@
-#@find_package@(Name CONFIG REQUIRED COMPONENTS name)
+##
+## External packages
+##
+# Note: Cannot use CONFIG because we rely on Conan generator "cmake_find_package"
+#@find_package@(Name @REQUIRED@ COMPONENTS name)
 
-#@find_package_internal@({{Project}} CONFIG REQUIRED COMPONENTS name)
+##
+## Internal packages (components in the same repository)
+##
+#@find_package@({{Project}} CONFIG @REQUIRED@ COMPONENTS name)
