--- a/cpprepo/src/libs/{{project}}/{{project}}/CMakeLists.txt
+++ b/cpprepo/src/libs/{{project}}/{{project}}/CMakeLists.txt
@@ -1,43 +1,53 @@
-project({{project}} VERSION "${CMAKE_PROJECT_VERSION}")
+set(TARGET_NAME {{project}})
 
-set(${PROJECT_NAME}_HEADERS
+set(${TARGET_NAME}_HEADERS
 )
 
-set(${PROJECT_NAME}_SOURCES
+set(${TARGET_NAME}_SOURCES
 )
+
+source_group(TREE ${CMAKE_CURRENT_LIST_DIR}
+             FILES ${${TARGET_NAME}_HEADERS} ${${TARGET_NAME}_SOURCES}
+)
+
+add_library(${TARGET_NAME}
+            ${${TARGET_NAME}_SOURCES}
+            ${${TARGET_NAME}_HEADERS}
+)
+
+add_library(ad::${TARGET_NAME} ALIAS ${TARGET_NAME})
+
+cmc_target_current_include_directory(${TARGET_NAME})
+
+set_target_properties(${TARGET_NAME} PROPERTIES
+                      VERSION "${${PROJECT_NAME}_VERSION}"
+)
+
+
+##
+## Dependencies
+##
 
 cmc_find_dependencies()
 
-add_library(${PROJECT_NAME}
-            ${${PROJECT_NAME}_SOURCES}
-            ${${PROJECT_NAME}_HEADERS}
-)
-
-add_library(ad::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
-
-cmc_target_current_include_directory(${PROJECT_NAME})
-
-#target_link_libraries(${PROJECT_NAME}
+#target_link_libraries(${TARGET_NAME}
 #    PUBLIC
 #)
-
-set_target_properties(${PROJECT_NAME} PROPERTIES
-                      VERSION "${${PROJECT_NAME}_VERSION}"
-)
 
 
 ##
 ## Install
 ##
 
-install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets)
+install(TARGETS ${TARGET_NAME} EXPORT ${TARGET_NAME}Targets)
 
 include(cmc-install)
 # Install the headers preserving the directory hierarchy
-cmc_install_with_folders(FILES ${${PROJECT_NAME}_HEADERS}
-                         DESTINATION include/${PROJECT_NAME}/${PROJECT_NAME}
+cmc_install_with_folders(FILES ${${TARGET_NAME}_HEADERS}
+                         DESTINATION include/${TARGET_NAME}/${TARGET_NAME}
 )
-cmc_install_packageconfig(${PROJECT_NAME} ${PROJECT_NAME}Targets
+# Prepare CMake package in both build and install trees
+cmc_install_packageconfig(${TARGET_NAME} ${TARGET_NAME}Targets ${PROJECT_NAME}
                           FIND_FILE "CMakeFinds.cmake.in"
                           NAMESPACE {{cmake_namespace}}::
 )
