[cpprepo] Move test application to a subfolder, like for libs.

--- a/cpprepo/src/CMakeLists.txt
+++ b/cpprepo/src/CMakeLists.txt
@@ -2,5 +2,5 @@ add_subdirectory(libs/{{project}}/{{project}})
 
 option (BUILD_tests "Build 'tests' application" true)
 if(BUILD_tests)
-    add_subdirectory(apps/{{project}}_tests)
+    add_subdirectory(apps/{{project}}_tests/{{project}}_tests)
 endif()
