--- a/cpprepo/.gitignore
+++ b/cpprepo/.gitignore
@@ -7,8 +7,20 @@
 /build-*/
 /conan/test_package/build/
 
+# CMake
+CMakeUserPresets.json
+
+# Conan
+# It tends to put those files in the working directory
+conan.lock
+conanbuildinfo.txt
+conaninfo.txt
+graph_info.json
+conan_imports_manifest.txt
+
 # Clang tooling #
-.clangd/
+.clangd
+.cache/clangd/
 compile_commands.json
 
 # Vim #
