--- a/cpprepo/CMakeLists.txt
+++ b/cpprepo/CMakeLists.txt
@@ -12,12 +12,14 @@ cmc_include_conan_configuration()
 # Enable the grouping target in folders, when available in IDE.
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-# Export compile commands by default
-set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
+# Note: also set by conanuser_config.cmake
+option (BUILD_CONF_WarningAsError "Enable warning as error compiler option." False)
 
 # Install the top-level package config, allowing to find all sub-components
 include(cmc-install)
 cmc_install_root_component_config(${PROJECT_NAME})
 cmc_register_source_package(${PROJECT_NAME})
 
+include(cmc-cpp)
+cmc_cpp_define_sanitizer_enum()
 add_subdirectory(src)
